maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:46: error: illegal start of simple expression
  var xModDir = [0, 1, 0, -1];
                ^